style.css
.menu-btn {
    position:absolute;
    left:5px;
    top:5px;
    width:20px;
}
.menu-btn:hover {
    cursor:pointer;
}
.main-nav {
    display:none;
    position: fixed;
    left: 5px;
    top: 25px;
    margin: 5px;
    padding: 5px;
    background-color: rgba(0, 0, 0, 0.4);
    color: white;
    list-style-type: none;
}
.main-nav li {
    text-align: center;
    margin: 2px;
    margin-left: 0px;
    padding-left: 0px;
    list-style-type: none;
}
.main-nav li:hover {
    background-color: rgba(10, 10, 10, 0.4);
    
}
.main-nav li a {
    text-decoration: none;
}
.main-nav li a:hover {
    text-decoration: none;
}
.debug-text {
    font-family:monospace;
}

